@@ -1,0 +1,3 @@
+When /^I set env variable "(\w+)" to "([^"]*)"$/ do |var, value|
+  ENV[var] = value
+end
